refactor(search): remove hardcoded prompt suggestions and align contracts
Drop hardcoded search suggestions from backend and frontend to keep prompt search responses focused on parsedQuery/results only, and align tests/docs/roadmap with the updated behavior.